--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <section class="knowledge">
             <div class="knowledge__container container">
                 <div class="knowledege__texts">
-                    <h2 class="subtitle">Mi nombre es Celeste, soy tarologa y terapeuta de Barra de Access y practicante de otras disciplinas de sanación como Reiki y meditación.</h2>
+                    <h2 class="subtitle">Me llamo Celeste, soy tarologa y terapeuta de Barra de Access y practicante de otras disciplinas de sanación como Reiki y meditación.</h2>
                     <p class="knowledge__paragraph"> A través de herramientas como el Tarot, las Barras de Access, el Reiki y la meditación, encontré claridad, sanación y un propósito que le dio sentido a mi vida.
                         Hoy, mi misión es compartir estas herramientas y experiencias con otras personas que estén buscando un camino hacia la transformación. 
                         En mis sesiones de Tarot, no solo ofrezco orientación, sino también un espacio seguro para conectar con el poder personal de cada uno.. (ese con el que TODOS nacemos)
