mejoras de xuxa

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="hero">
         <nav class="nav container">
             <div class="nav__logo">
-                <h1 class="nav__title">Tarot Terapeutico</h1>
+                <h1 class="nav__title">TAROT CENTAURA</h1>
             </div>
 
             <ul class="nav__link nav__link--menu">
@@ -60,8 +60,24 @@
         </nav>
 
         <section class="hero__container container">
-            <h2 class="hero__title">Tarot Centaura</h2>
-            <p class="hero__paragraph">Bienvenido a nuestro tarot terapéutico, donde unimos la sabiduría del tarot con sanación emocional. Te ofrezco lecturas personalizadas para explorar inquietudes, aclarar decisiones y fomentar el autoconocimiento. Empodérate en tu camino personal y descubre nuevas oportunidades. ¡Unite a este viaje de transformación!.</p>
+            <h2 class="hero__title">CELESTE NAVARRO</h2>
+            <p class="hero__paragraph">Tarologa y Terapeuta en Barras de Access.<br>
+            Estoy acá porque también estuve del otro lado.
+Buscando respuestas, sintiéndome perdida, confiando en personas o caminos que no me llevaban a donde quería.
+
+Hasta que un día entendí algo que me cambió la vida: el poder siempre estuvo en mí.
+Desde ese momento, decidí transformar mi realidad. Estudié, me formé, pero sobre todo, viví cada proceso que hoy acompaño y enseño.
+
+Por eso, si venís buscando tarot predictivo, quiero decirte con amor que este no es ese lugar.
+Este espacio lo creé para ayudarte a ver con claridad eso que tu interior ya sabe, pero que quizás todavía no pudiste escuchar, aceptar o entender.
+
+No vengo a predecirte el futuro. Vengo a ayudarte a crearlo.
+
+Con el Tarot Terapéutico, abrimos ese diálogo con tu verdad más profunda.
+Y con las Barras de Access, liberamos lo que te pesa mental y emocionalmente—todo eso que muchas veces no solo es tuyo, sino que viene cargando todo un árbol genealógico.
+
+Este espacio nace desde mi historia, pero está pensado para vos.
+Para que te sientas contenida, escuchada, y sobre todo, para que recuerdes quién sos y el poder con el que ya naciste.</p>
             <a href=" https://wa.me/+5491126975738" class="cta">Solicita tu turno ahora</a>
         </section>
     </header>
@@ -71,14 +87,23 @@
         <section class="knowledge">
             <div class="knowledge__container container">
                 <div class="knowledege__texts">
-                    <h2 class="subtitle">
-                                         ✨ Tarologa Holística<br> 
-                                         💆‍♀️ Terapeuta en Barras de Access</h2>
-                    <p class="knowledge__paragraph"> A través de herramientas como el Tarot, las Barras de Access, el Reiki y la meditación, encontré claridad, sanación y un propósito que le dio sentido a mi vida.
-                        Hoy, mi misión es compartir estas herramientas y experiencias con otras personas que estén buscando un camino hacia la transformación. 
-                        En mis sesiones de Tarot, no solo ofrezco orientación, sino también un espacio seguro para conectar con el poder personal de cada uno.. (ese con el que TODOS nacemos)
-                         Las terapias que brindo están diseñadas para ayudar a liberar bloqueos, ganar confianza y recordar que, incluso en los momentos más oscuros, es posible renacer!</p>
-                    <a href="https://wa.me/+5491126975738" class="cta">Pedime ahora mismo un turno y descubri la magia</a>
+                    <h2 class="subtitle">✨La combinación perfecta:<br> Tarot Terapéutico + Barras de Access✨</h2>
+                    <p class="knowledge__paragraph"> En mi trabajo integro dos herramientas poderosas que se complementan para acompañarte desde diferentes planos: mente, emociones y energía.
+
+El Tarot Terapéutico te invita a mirar hacia adentro con amor y honestidad. Para realmente transformar los patrones que te limitan, es fundamental que haya un compromiso sincero y valiente de tu parte para aceptar tu verdad, incluso cuando sea difícil. Este espacio es seguro y amoroso, pero también requiere esa honestidad para que el cambio sea profundo y duradero. No se trata de predecir el futuro, sino de darte claridad para entender qué te está pasando y cómo avanzar desde la conciencia y la compasión.
+
+Por otro lado, las Barras de Access liberan la carga mental y emocional que sostiene esos bloqueos. Desactivan creencias limitantes, miedos y tensiones que muchas veces ni siquiera sabemos que cargamos, creando espacio para la relajación, la apertura y la transformación.
+
+Juntas, estas terapias te ofrecen una experiencia completa:
+
+La sabiduría y guía profunda del Tarot para conectar con tu verdad interior, desde el amor y la honestidad.
+
+La limpieza energética de las Barras para soltar lo que ya no te sirve y abrir espacio al cambio.
+
+Esta combinación te ayuda a soltar viejas ataduras, activar tu poder personal y crear nuevas formas de vivir desde la claridad, el equilibrio y la libertad.
+
+</p>
+                    <a href="https://wa.me/+5491126975738" class="cta">Solicitar mi lugar</a>
                 </div>
 
                 <figure class="knowledge__picture">
@@ -89,25 +114,40 @@
 
         <section class="container about">
             <h2 class="subtitle">Diferencias entre Tarot Predictivo y Tarot Terapeutico</h2>
-            <p class="about__paragraph">El Tarot Predictivo y el Tarot Terapéutico son dos enfoques diferentes, pero ambos tienen el poder de ayudarte a comprender mejor tu vida. Sin embargo, se enfocan en aspectos distintos de tu camino.</p>
+            <p class="about__paragraph"></p>
 
             <div class="about__main">
                 <article class="about__icons">
                     <img src="./images/tarot-card-2-svgrepo-com.svg" class="about__icon">
                     <h3 class="about__title">Tarot Terapéutico</h3>
-                    <p class="about__paragrah">El Tarot Terapéutico, en cambio, se enfoca en tu bienestar emocional y espiritual en el presente. Aquí, las cartas no solo hablan del futuro, sino de lo que está sucediendo en tu interior ahora mismo. Este tipo de tarot te ayuda a comprender las raíces de tus bloqueos emocionales, miedos o patrones que te limitan. Es una herramienta para el autoconocimiento, el sanamiento de heridas del pasado y la liberación de lo que ya no te sirve. Su objetivo es brindarte paz interior y fortalecer tu conexión contigo mismo.</p>
+                    <p class="about__paragrah"> El Tarot Terapéutico te invita a mirar hacia adentro, a entender qué emociones, creencias o bloqueos están detrás de lo que vivís hoy. Trabaja desde el presente para darte herramientas que te permitan cambiar tu realidad desde la raíz. Para que ese cambio empiece a surgir, es fundamental que estés abierto y dispuesta a trabajar en vos misma con compromiso y honestidad.
+
+Al trabajar primero con el Tarot Terapéutico:
+
+Te empoderás porque comprendes tus patrones y tomás decisiones conscientes.
+
+Dejas de vivir con miedo o incertidumbre sobre el futuro.
+
+Construís un camino propio, con autenticidad y responsabilidad sobre tu vida.
+
+Es un proceso activo, profundo y sanador que abre el espacio para que cualquier otra consulta (predictiva o de otro tipo) tenga sentido y verdadero valor para vos.</p>
                 </article>
 
                 <article class="about__icons">
                     <img src="./images/six-of-cups-svgrepo-com.svg" class="about__icon">
                     <h3 class="about__title">Tarot Predictivo</h3>
-                    <p class="about__paragrah">El Tarot Predictivo está diseñado para ofrecerte una visión de lo que puede suceder en el futuro. Si tienes dudas sobre una decisión importante o deseas saber cómo podría desarrollarse una situación, este tipo de tarot puede proporcionarte una guía de lo que está por venir. Es como tener un mapa del futuro, ayudándote a tomar decisiones con base en las tendencias que se muestran en las cartas. Este enfoque es ideal cuando necesitas claridad sobre posibles resultados y quieres ver qué direcciones pueden abrirse ante ti.</p>
+                    <p class="about__paragrah">El Tarot Predictivo se centra en anticipar eventos futuros, y aunque no está mal en sí mismo, muchas veces está mal usado o mal implementado. Esto puede generar ansiedad, dependencia o sensación de falta de control. Nos pone en un rol pasivo, esperando que algo “pase” sin que podamos intervenir realmente. Además, en muchos casos, no nos conduce al camino que realmente necesitamos para nuestro crecimiento. </p>
                 </article>
 
                 <article class="about__icons">
                     <img src="./images/lampara.svg" class="about__icon">
                     <h3 class="about__title">Conclusión</h3>
-                    <p class="about__paragrah">Ambos enfoques tienen su valor, pero mi enfoque principal es el Tarot Terapéutico. Creo que la verdadera transformación viene desde adentro, sanando lo que nos limita y abriendo espacio para el crecimiento personal. A través de este enfoque, te ayudo a liberarte de cargas emocionales y a encontrar la paz que te permite avanzar con claridad y confianza.</p>
+                    <p class="about__paragrah">Trabajar primero con el Tarot Terapéutico es elegir responsabilizarte de tu propia vida, abrazar la verdad de tu presente y abrirte al cambio auténtico.
+Se trata de aprender a crear lo que querés que pase en tu destino.
+
+Si estás dispuesta a mirar con honestidad, trabajar desde el amor y dar ese paso valiente hacia tu transformación, este camino es para vos.
+
+Porque el verdadero poder no está en predecir el futuro, sino en crearlo desde adentro.</p>
                 </article>
             </div>
         </section>
@@ -115,7 +155,7 @@
         <section class="video-diferencias">
             <div class="video-container">
                 <article class="article-video">
-                    <video class="video" src="./videos/Video-deferencias-tarot.mp4" controls autoplay>
+                    <video class="video" src="./videos/Video-deferencias-tarot.mp4">
                     </video>
                 </article>
             </div>
@@ -123,49 +163,52 @@
 
         <section class="questions container">
             <h2 class="subtitle">Preguntas frecuentes</h2>
-            <p class="questions__paragraph">Aquí encontrarás respuestas a las preguntas más comunes sobre el tarot terapéutico. Nuestro objetivo es ofrecerte claridad y confianza en este camino de autoconocimiento.</p>
+            <p class="questions__paragraph">Mi objetivo es ofrecerte claridad y confianza en este camino de autoconocimiento, por eso quiero despejar algunas dudas comunes.</p>
 
             <section class="questions__container">
                 <article class="questions__padding">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué es el tarot terapéutico?
+                        <h3 class="questions__title">¿Es necesario tener experiencia previa con estas terapias?
                             <span class="questions__arrow">
                                 <img src="./images/click2.svg" class="questions__img">
                             </span>
                         </h3>
 
-                        <p class="questions__show">El tarot terapéutico es una herramienta de autoconocimiento que combina la sabiduría del tarot con un enfoque emocional. A través de las cartas, podemos explorar tus inquietudes y ofrecerte nuevas perspectivas sobre tus desafíos y oportunidades.</p>
+                        <p class="questions__show">No, no necesitas experiencia previa. Las sesiones las diseñe para acompañarte paso a paso, desde cualquier punto mental en que te encuentres.
+
+.</p>
                     </div>
                 </article>
 
                 <article class="questions__padding">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Cómo puedo prepararme para una lectura?
+                        <h3 class="questions__title">¿Cuánto duran las sesiones y con qué frecuencia debo hacerlas?
                             <span class="questions__arrow">
                                 <img src="./images/click2.svg" class="questions__img">
                             </span>
                         </h3>
 
-                        <p class="questions__show">Para aprovechar al máximo tu lectura, te sugerimos que te tomes un momento para reflexionar sobre tus preguntas y emociones. Mantén una mente abierta y dispuesta a recibir lo que el tarot tiene para ofrecerte. Esto enriquecerá tu experiencia y facilitará el proceso de autodescubrimiento.</p>
+                        <p class="questions__show">Las sesiones suelen durar 2 horas aproximadamente. La frecuencia depende de tus necesidades y objetivos, que podemos definir juntas en la primera consulta.</p>
                     </div>
                 </article>
 
                 <article class="questions__padding">
                     <div class="questions__answer">
-                        <h3 class="questions__title">¿Qué temas puedo abordar en una lectura?
+                        <h3 class="questions__title">¿Necesito estar abierto/a para que las sesiones funcionen?
                             <span class="questions__arrow">
                                 <img src="./images/click2.svg" class="questions__img">
                             </span>
                         </h3>
 
-                        <p class="questions__show">Puedes explorar una amplia gama de temas, incluyendo relaciones personales, desafíos profesionales y la búsqueda de significado en tu vida. El tarot puede ofrecerte orientación y claridad en momentos de incertidumbre, ayudándote a tomar decisiones alineadas con tu verdadero yo.</p>
+                        <p class="questions__show">Sí, la honestidad y la disposición para trabajar en uno mismo son clave para que el proceso sea efectivo. Es un trabajo conjunto donde tu compromiso y mi ética profesional son fundamentales para lograr cambios profundos.</p>
                     </div>
                 </article>
             </section>
 
             <section class="questions__offer">
-                <h2 class="subtitle">¿Estas listo para emprender este camino ?</h2>
-                <p class="questions__copy">La transformación y el autoconocimiento están al alcance de tu mano. Si sientes la llamada de este viaje, te invito a dar el primer paso. Juntos, podemos explorar las oportunidades que te esperan y ayudarte a encontrar el camino que resuena con tu esencia.</p>
+                <h2 class="subtitle">¿Estás listo/a para despertar tu poder interior?</h2>
+                <p class="questions__copy">Si sentís que es momento de hacer un cambio profundo, de soltar lo que ya no te sirve y reconectar con tu esencia, estás en el lugar indicado.
+Te acompaño con amor, honestidad y compromiso en este camino de transformación para que seas consciente del poder con el que naciste.</p>
                 <a href=" https://wa.me/+5491126975738" class="cta">Reserva una cita conmigo ahora</a>
             </section>
         </section>
