--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ Te acompaño con amor, honestidad y compromiso en este camino de transformación
             </div>
         </section>
 
-        <section class="price container">
+       <!-- <section class="price container">
             <h2 class="subtitle">PROXIMAMENTE</h2>
 
             <div class="price__table">
@@ -322,7 +322,7 @@ Te acompaño con amor, honestidad y compromiso en este camino de transformación
 
             </div>
         </section>
-
+-->
     </main>
 
     <footer class="footer">
