se modificaron cosas

--- a/index.html
+++ b/index.html
@@ -152,15 +152,6 @@ Porque el verdadero poder no está en predecir el futuro, sino en crearlo desde 
             </div>
         </section>
 
-        <section class="video-diferencias">
-            <div class="video-container">
-                <article class="article-video">
-                    <video class="video" src="./videos/Video-deferencias-tarot.mp4">
-                    </video>
-                </article>
-            </div>
-        </section>
-
         <section class="questions container">
             <h2 class="subtitle">Preguntas frecuentes</h2>
             <p class="questions__paragraph">Mi objetivo es ofrecerte claridad y confianza en este camino de autoconocimiento, por eso quiero despejar algunas dudas comunes.</p>
@@ -326,6 +317,11 @@ Te acompaño con amor, honestidad y compromiso en este camino de transformación
     </main>
 
     <footer class="footer">
+                        <section class="nota-importante">
+                <p>
+                    NOTA: Las terapias alternativas acompañan, pero no reemplazan las terapias medicas y/o psicologicas.
+                </p>
+                </section>
         <section class="footer__container container">
             <nav class="nav nav--footer">
                 <h2 class="footer__title">Tarot Centaura</h2>
@@ -342,13 +338,14 @@ Te acompaño con amor, honestidad y compromiso en este camino de transformación
                     </li>
                 </ul>
             </nav>
-
+            
             <section class="questions__offer">
                 <a href=" https://wa.me/+5491126975738" class="cta2">Reserva una cita!
                 </a>
             </section>
-
         </section>
+
+        
 
         <section class="footer__copy container">
             <div class="footer__social">
