--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <nav class="nav container">
             <div class="nav__logo">
                 <h1 class="nav__title">TAROT CENTAURA</h1>
+                <h1 class="nav__title2">CELESTE NAVARRO</h1>
             </div>
 
             <ul class="nav__link nav__link--menu">
