se acomodo todo

--- a/index.html
+++ b/index.html
@@ -42,10 +42,7 @@
 
             <ul class="nav__link nav__link--menu">
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Inicio</a>
-                </li>
-                <li class="nav__items">
-                    <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">Acerca de mi</a>
+                    <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">Instagram</a>
                 </li>
                 <li class="nav__items">
                     <a href=" https://wa.me/+5491126975738" class="nav__links">Contacto</a>
@@ -153,58 +150,6 @@ Porque el verdadero poder no está en predecir el futuro, sino en crearlo desde 
             </div>
         </section>
 
-        <section class="questions container">
-            <h2 class="subtitle">Preguntas frecuentes</h2>
-            <p class="questions__paragraph">Mi objetivo es ofrecerte claridad y confianza en este camino de autoconocimiento, por eso quiero despejar algunas dudas comunes.</p>
-
-            <section class="questions__container">
-                <article class="questions__padding">
-                    <div class="questions__answer">
-                        <h3 class="questions__title">¿Es necesario tener experiencia previa con estas terapias?
-                            <span class="questions__arrow">
-                                <img src="./images/click2.svg" class="questions__img">
-                            </span>
-                        </h3>
-
-                        <p class="questions__show">No, no necesitas experiencia previa. Las sesiones las diseñe para acompañarte paso a paso, desde cualquier punto mental en que te encuentres.
-
-.</p>
-                    </div>
-                </article>
-
-                <article class="questions__padding">
-                    <div class="questions__answer">
-                        <h3 class="questions__title">¿Cuánto duran las sesiones y con qué frecuencia debo hacerlas?
-                            <span class="questions__arrow">
-                                <img src="./images/click2.svg" class="questions__img">
-                            </span>
-                        </h3>
-
-                        <p class="questions__show">Las sesiones suelen durar 2 horas aproximadamente. La frecuencia depende de tus necesidades y objetivos, que podemos definir juntas en la primera consulta.</p>
-                    </div>
-                </article>
-
-                <article class="questions__padding">
-                    <div class="questions__answer">
-                        <h3 class="questions__title">¿Necesito estar abierto/a para que las sesiones funcionen?
-                            <span class="questions__arrow">
-                                <img src="./images/click2.svg" class="questions__img">
-                            </span>
-                        </h3>
-
-                        <p class="questions__show">Sí, la honestidad y la disposición para trabajar en uno mismo son clave para que el proceso sea efectivo. Es un trabajo conjunto donde tu compromiso y mi ética profesional son fundamentales para lograr cambios profundos.</p>
-                    </div>
-                </article>
-            </section>
-
-            <section class="questions__offer">
-                <h2 class="subtitle">¿Estás listo/a para despertar tu poder interior?</h2>
-                <p class="questions__copy">Si sentís que es momento de hacer un cambio profundo, de soltar lo que ya no te sirve y reconectar con tu esencia, estás en el lugar indicado.
-Te acompaño con amor, honestidad y compromiso en este camino de transformación para que seas consciente del poder con el que naciste.</p>
-                <a href=" https://wa.me/+5491126975738" class="cta">Reserva una cita conmigo ahora</a>
-            </section>
-        </section>
-
         <section class="testimony">
             <div class="testimony__container container">
                 <img src="./images/flecha-izq.svg" class="testimony__arrow" id="before">
@@ -266,6 +211,83 @@ Te acompaño con amor, honestidad y compromiso en este camino de transformación
 
 
                 <img src="./images/flecha-der.svg" class="testimony__arrow" id="next">
+            </div>
+        </section>
+
+        <section class="questions container">
+            <h2 class="subtitle">Preguntas frecuentes</h2>
+            <p class="questions__paragraph">Mi objetivo es ofrecerte claridad y confianza en este camino de autoconocimiento, por eso quiero despejar algunas dudas comunes.</p>
+
+            <section class="questions__container">
+                <article class="questions__padding">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Es necesario tener experiencia previa con estas terapias?
+                            <span class="questions__arrow">
+                                <img src="./images/click2.svg" class="questions__img">
+                            </span>
+                        </h3>
+
+                        <p class="questions__show">No, no necesitas experiencia previa. Las sesiones las diseñe para acompañarte paso a paso, desde cualquier punto mental en que te encuentres.
+
+.</p>
+                    </div>
+                </article>
+
+                <article class="questions__padding">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Cuánto duran las sesiones y con qué frecuencia debo hacerlas?
+                            <span class="questions__arrow">
+                                <img src="./images/click2.svg" class="questions__img">
+                            </span>
+                        </h3>
+
+                        <p class="questions__show">Las sesiones suelen durar 2 horas aproximadamente. La frecuencia depende de tus necesidades y objetivos, que podemos definir juntas en la primera consulta.</p>
+                    </div>
+                </article>
+
+                <article class="questions__padding">
+                    <div class="questions__answer">
+                        <h3 class="questions__title">¿Necesito estar abierto/a para que las sesiones funcionen?
+                            <span class="questions__arrow">
+                                <img src="./images/click2.svg" class="questions__img">
+                            </span>
+                        </h3>
+
+                        <p class="questions__show">Sí, la honestidad y la disposición para trabajar en uno mismo son clave para que el proceso sea efectivo. Es un trabajo conjunto donde tu compromiso y mi ética profesional son fundamentales para lograr cambios profundos.</p>
+                    </div>
+                </article>
+            </section>
+
+            <section class="questions__offer">
+                <h2 class="subtitle">¿Estás listo/a para despertar tu poder interior?</h2>
+                <p class="questions__copy">Si sentís que es momento de hacer un cambio profundo, de soltar lo que ya no te sirve y reconectar con tu esencia, estás en el lugar indicado.
+Te acompaño con amor, honestidad y compromiso en este camino de transformación para que seas consciente del poder con el que naciste.</p>
+                <a href=" https://wa.me/+5491126975738" class="cta">Reserva una cita conmigo ahora</a>
+            </section>
+        </section>
+
+        <section class="container about2">
+            <h2 class="subtitle2"></h2>
+            <p class="about__paragraph2"></p>
+
+            <div class="about__main">
+                <article class="about__icons2">
+                    <img src="./images/Медитация _ Эстетика.jpeg" class="about__icon2">
+                    <h3 class="about__title2"></h3>
+                    <p class="about__paragrah2"> </p>
+                </article>
+
+                <article class="about__icons2">
+                    <img src="./images/Эзотерика _ Обои.jpeg" class="about__icon2">
+                    <h3 class="about__title2"></h3>
+                    <p class="about__paragrah2"></p>
+                </article>
+
+                <article class="about__icons2">
+                    <img src="./images/sfgsdgdg.jpeg" class="about__icon2">
+                    <h3 class="about__title2"></h3>
+                    <p class="about__paragrah2"></p>
+                </article>
             </div>
         </section>
 
