se acomodo todo de nuevo

--- a/index.html
+++ b/index.html
@@ -152,65 +152,14 @@ Porque el verdadero poder no está en predecir el futuro, sino en crearlo desde 
 
         <section class="testimony">
             <div class="testimony__container container">
-                <img src="./images/flecha-izq.svg" class="testimony__arrow" id="before">
-
                 <section class="testimony__body testimony__body--show" data-id="1">
                     <div class="testimony__texts">
-                        <h2 class="subtitle">Testimonios <!--<span class="testimony__course">......</span></h2>
-                        <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
-                            esse, asperiores eaque totam nulla repudiandae quasi, deserunt culpa exercitationem
-                            blanditiis laborum veniam laboriosam saepe reiciendis dolorem. Cum, ratione voluptatum!</p> -->
+                        <h2 class="subtitle">Testimonios
                     </div>
-
                     <figure class="testimony__picture">
-                        <img src="./images/consultante4.jpeg" alt="Lectura de tarot terapéutico en línea para sanación emocional"  class="testimony__img">
+                        <a href="http://127.0.0.1:5501/testimonios.html"><img src="./images/cn.png" class="testimony__img"></a>
                     </figure>
                 </section>
-
-                <section class="testimony__body" data-id="2">
-                    <div class="testimony__texts">
-                        <h2 class="subtitle">Testimonios <!-- <span class="testimony__course">estudiante de
-                                CSS.</span></h2>
-                        <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
-                            esse, asperiores eaque laborum veniam laboriosam saepe reiciendis dolorem. Cum, ratione
-                            voluptatum!</p>-->
-                    </div>
-
-                    <figure class="testimony__picture">
-                        <img src="./images/consultante1.jpeg" class="testimony__img">
-                    </figure>
-                </section>
-
-                <section class="testimony__body" data-id="3">
-                    <div class="testimony__texts">
-                        <h2 class="subtitle">Testimonios <!-- <span class="testimony__course">estudiante de
-                            CSS.</span></h2>
-                    <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
-                        esse, asperiores eaque laborum veniam laboriosam saepe reiciendis dolorem. Cum, ratione
-                        voluptatum!</p>-->
-                    </div>
-
-                    <figure class="testimony__picture">
-                        <img src="./images/consultante2.jpeg" class="testimony__img">
-                    </figure>
-                </section>
-
-                <section class="testimony__body" data-id="4">
-                    <div class="testimony__texts">
-                        <h2 class="subtitle">Testimonios<!-- <span class="testimony__course">estudiante de
-                            CSS.</span></h2>
-                    <p class="testimony__review">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut est
-                        esse, asperiores eaque laborum veniam laboriosam saepe reiciendis dolorem. Cum, ratione
-                        voluptatum!</p>-->
-                    </div>
-
-                    <figure class="testimony__picture">
-                        <img src="./images/consultante3.jpeg" class="testimony__img">
-                    </figure>
-                </section>
-
-
-                <img src="./images/flecha-der.svg" class="testimony__arrow" id="next">
             </div>
         </section>
 
@@ -267,24 +216,27 @@ Te acompaño con amor, honestidad y compromiso en este camino de transformación
         </section>
 
         <section class="container about2">
-            <h2 class="subtitle2"></h2>
-            <p class="about__paragraph2"></p>
+            <h2 class="subtitle2">En este rincon vas a encontrar la energia de cada dia</h2>
+            <p class="about__paragraph2">Dale click a las imagenes</p>
 
             <div class="about__main">
                 <article class="about__icons2">
-                    <img src="./images/Медитация _ Эстетика.jpeg" class="about__icon2">
-                    <h3 class="about__title2"></h3>
-                    <p class="about__paragrah2"> </p>
-                </article>
-
-                <article class="about__icons2">
-                    <img src="./images/Эзотерика _ Обои.jpeg" class="about__icon2">
+                    <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">
+                        <img src="./images/Медитация _ Эстетика.jpeg" class="about__icon2"></a>
                     <h3 class="about__title2"></h3>
                     <p class="about__paragrah2"></p>
                 </article>
 
                 <article class="about__icons2">
-                    <img src="./images/sfgsdgdg.jpeg" class="about__icon2">
+                    <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">
+                        <img src="./images/mensaje-dia.png" class="about__icon2"></a>
+                    <h3 class="about__title2"></h3>
+                    <p class="about__paragrah2"></p>
+                </article>
+
+                <article class="about__icons2">
+                    <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">
+                        <img src="./images/sfgsdgdg.jpeg" class="about__icon2"></a>
                     <h3 class="about__title2"></h3>
                     <p class="about__paragrah2"></p>
                 </article>
@@ -337,6 +289,7 @@ Te acompaño con amor, honestidad y compromiso en este camino de transformación
             </div>
         </section>
 -->
+    
     </main>
 
     <footer class="footer">
