se configuro testimio

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Porque el verdadero poder no está en predecir el futuro, sino en crearlo desde 
                         <h2 class="subtitle">Testimonios
                     </div>
                     <figure class="testimony__picture">
-                        <a href="http://127.0.0.1:5501/testimonios.html"><img src="./images/cn.png" class="testimony__img"></a>
+                        <a href="./testimonios.html"><img src="./images/cn.png" class="testimony__img"></a>
                     </figure>
                 </section>
             </div>
