se cambiaron imagenes

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ Porque el verdadero poder no está en predecir el futuro, sino en crearlo desde 
                         <h2 class="subtitle">Testimonios
                     </div>
                     <figure class="testimony__picture">
-                        <a href="./testimonios.html"><img src="./images/cn.png" class="testimony__img"></a>
+                        <a href="./testimonios.html"><img src="./images/TESTIMONIOS TAROTEROS.png" class="testimony__img"></a>
                     </figure>
                 </section>
             </div>
@@ -222,21 +222,21 @@ Te acompaño con amor, honestidad y compromiso en este camino de transformación
             <div class="about__main">
                 <article class="about__icons2">
                     <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">
-                        <img src="./images/Медитация _ Эстетика.jpeg" class="about__icon2"></a>
+                        <img src="./images/consejos que nadie pidio.png" class="about__icon2"></a>
                     <h3 class="about__title2"></h3>
                     <p class="about__paragrah2"></p>
                 </article>
 
                 <article class="about__icons2">
                     <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">
-                        <img src="./images/mensaje-dia.png" class="about__icon2"></a>
+                        <img src="./images/Diseño sin título (2).png" class="about__icon2"></a>
                     <h3 class="about__title2"></h3>
                     <p class="about__paragrah2"></p>
                 </article>
 
                 <article class="about__icons2">
                     <a href="https://www.instagram.com/tarot_centaura/" class="nav__links">
-                        <img src="./images/sfgsdgdg.jpeg" class="about__icon2"></a>
+                        <img src="./images/m,.ñhy.png" class="about__icon2"></a>
                     <h3 class="about__title2"></h3>
                     <p class="about__paragrah2"></p>
                 </article>
